<resources>
    <string name="app_name">GmBoard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_unit_creation">Unit creation</string>
    <string name="ButtonCreate">Créer</string>
    <string name="ButtonPlay">Jouer</string>
    <string name="Sound1">Son1</string>
    <string name="Sound2">Son2</string>
    <string name="Sound3">Son3</string>
    <string name="Sound4">Son4</string>
    <string name="Sound5">Son5</string>
    <string name="LevelUp">Level Up</string>
    <string name="Coin">Coin</string>
    <string name="chat">Miaou</string>
    <string name="title_activity_sound_board">SoundBoard</string>
    <string name="unitNameTitle">Unit name</string>
    <string name="unitHPTitle">Max HP (*)</string>
    <string name="unitAttackTitle">Attack (*)</string>
    <string name="unitDefenseTitle">Defense (*)</string>
    <string name="unitStrengthTitle">Strength (*)</string>
    <string name="unitDexterityTitle">Dexterity (*)</string>
    <string name="unitConstitutionTitle">Constitution (*)</string>
    <string name="unitIntelligenceTitle">Intelligence (*)</string>
    <string name="unitWisdomTitle">Wisdom (*)</string>
    <string name="unitCharismaTitle">Charisma (*)</string>
    <string name="unitNotesTitle"> Additionnal notes </string>
    <string name="unitCreationConfirm">Create</string>
    <string name="ButtonUnitTest">Unit Test</string>
    <string name="Name">Name (*)</string>
    <string name="MaxHP">MaxHP (*)</string>
    <string name="Attack">Attack (*)</string>
    <string name="Defense">Defense (*)</string>
    <string name="Strength">Strength (*)</string>
    <string name="Dexterity">Dexterity (*)</string>
    <string name="Constitution">Constitution (*)</string>
    <string name="Intelligence">Intelligence (*)</string>
    <string name="Wisdom">Wisdom (*)</string>
    <string name="Charisma">Charisma (*)</string>
    <string name="checkBoxPC">Player character ?</string>
    <string name="creationError">A unit with this name already exists.</string>
    <string name="creationError2">Please, fill all mandatory fields</string>
    <string name="creationError3">A list with this name already exists.</string>
    <string name="creationError4">Please, enter a name for your list</string>
    <string name="ButtonEdit">Edit</string>
    <string name="ButtonDelete">Delete</string>
    <string name="ButtonNewUnit">New unit</string>
    <string name="ButtonNewList">New List</string>
    <string name="DeletionValidation">Are you sure you want to delete</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="screenTooSmall">This app does not run on devices this small. The app will now exit</string>
    <string name="quit">Quit</string>
    <string name="shortSound">Short Sounds</string>
    <string name="sound">Ambience music</string>
    <string name="label">Label</string>
    <string name="noTitle">No title yet</string>
</resources>
