<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="100"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GmBoard"

            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:textSize="36sp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/buttonUnitTest"
            android:layout_width="350dip"
            android:layout_height="0dp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:layout_weight="33"
            android:text="@string/ButtonUnitTest" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="350dip"
            android:layout_weight="33"
            android:layout_height="0dp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:text="@string/ButtonCreate" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="350dip"
            android:layout_weight="33"
            android:layout_height="0dp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:text="@string/ButtonPlay" />

        <Button
            android:id="@+id/unittest2"
            android:layout_width="350dip"
            android:layout_height="wrap_content"
            android:text="list unit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>