<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/UnitRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UnitListRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/ButtonNewUnit" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/UnitListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/UnitRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonNewList" />

    <Button
        android:id="@+id/ButtonNewUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonNewUnit"
        app:layout_constraintBottom_toTopOf="@+id/UnitRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/UnitRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/UnitRecyclerView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonNewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonNewList"
        app:layout_constraintBottom_toTopOf="@+id/UnitListRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/UnitListRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/UnitListRecyclerView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/UnitListRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/UnitListRecyclerView"
        app:layout_constraintTop_toTopOf="parent"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/TILName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonNewList"
        app:layout_constraintEnd_toStartOf="@+id/ButtonCreate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/UnitListRecyclerView"
        app:layout_constraintTop_toTopOf="parent"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/listName"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>